--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
 asgiref==3.8.1
+black==24.10.0
+click==8.1.7
 Django==5.1.3
+django-crontab==0.7.1
+load-dotenv==0.1.0
+mypy-extensions==1.0.0
+packaging==24.2
+pathspec==0.12.1
+pillow==11.0.0
+platformdirs==4.3.6
 psycopg2-binary==2.9.10
+python-dotenv==1.0.1
+python-slugify==8.0.4
+pytils==0.4.1
 sqlparse==0.5.2
+text-unidecode==1.3
+tomli==2.2.1
 typing_extensions==4.12.2
