--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+async-timeout==5.0.1
 black==24.10.0
 click==8.1.7
 Django==5.1.3
@@ -13,6 +14,7 @@ psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 python-slugify==8.0.4
 pytils==0.4.1
+redis==5.2.1
 sqlparse==0.5.2
 text-unidecode==1.3
 tomli==2.2.1
